Fix umbrella not shown on safari

--- a/src/css/containers/DashboardClubs.css
+++ b/src/css/containers/DashboardClubs.css
@@ -14,13 +14,13 @@
     flex-flow: row;
     align-items: center;
     justify-content: space-between;
-
     top: 0px;
     width: 100%;
     height: 55px;
     background-color: white;
     border-bottom: 1px solid #e6e9ef;
 }
+
 .dashboard-clubs-title {
     position: relative;
     flex-shrink: 0;
@@ -38,15 +38,19 @@
     font-family: 'Gotham-Bold';
 }
 
-.dashboard-clubs-umbrellas-list {
+.dashboard-clubs-umbrellas-container {
     position: absolute;
     top: 55px;
     right: 20px;
     width: 135px;
     z-index: 10000;
+}
+
+.dashboard-clubs-umbrellas-list {
     border-radius: 3px;
     box-shadow: 0 0 3px 1px rgba(215, 215, 225, 0.56);
 }
+
 .dashboard-umbrella-label {
     width: 100%;
     height: 20px;
@@ -68,11 +72,11 @@
     background-color: white;
     transition-duration: 0.2s;
 }
+
 .dashboard-umbrella-label:hover {
     font-family: 'Gotham-Bold';
     background-color: #e8e1ed;
 }
-
 
 .dashboard-clubs-club-list {
     position: relative;
